--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
   <link rel="shortcut icon" href="Resources/Images/favicon.ico" type="image/x-icon">
   <link rel="stylesheet" href="Resources/CSS/styles.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Home | Parker</title>
 </head>
 
